Let them know we have yanked out Docker and Ansible